# csc

./: .gitmodules  CMakeLists.txt  README.md  install.ps1
Diagrams/: CommunityScriptingCommands  CommunityScriptingCommands.drawio  folderPlacerholder.txt
addons/main/: config.cpp
lib/angelscript/sdk/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/AngelScripting/: script.cpp  script.hpp
src/AngelScripting/diag_wrapper/: diag.cpp  diag.hpp
src/AngelScripting/game_types/: game_data_types.cpp  game_data_types.hpp  vectors.cpp  vectors.hpp
src/Geometry/: rotator.cpp  rotator.hpp
src/Json/: json.cpp  json.hpp
src/json/: json.cpp
